feat: return underlying address
